--- a/House Pricing.ipynb
+++ b/House Pricing.ipynb
@@ -3348,26 +3348,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "8c866a5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/omarmarie/miniforge3/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
-   "source": [
-    "import xgboost\n",
-    "classifier=xgboost.XGBRegressor()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "id": "a7e82212",
    "metadata": {},
@@ -3406,10 +3386,7 @@
     "max_depth = [2, 3, 5, 10, 15]\n",
     "learning_rate=[0.1, 0.2]\n",
     "\n",
-    "hyperparameters = {\n",
-    "    'max_depth':max_depth,\n",
-    "    'learning_rate':learning_rate,\n",
-    "    }"
+    "hyperparameters = {'max_depth':max_depth, 'learning_rate':learning_rate}"
    ]
   },
   {
